fixed spacing in guestLogin

--- a/public/style.css
+++ b/public/style.css
@@ -346,3 +346,7 @@ body {
   right: 0;
   left: 0;
 }
+
+.icon {
+  margin-bottom: 1.5em;
+}
